# ML_deployment_fastapi

./: pyproject.toml  slice_output.txt
.dvc/: config
