[tool.poetry]
name = "ml-deployment-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
pytest = "^8.3.2"
requests = "^2.32.3"
fastapi = "0.63.0"
uvicorn = "^0.30.3"
gunicorn = "^22.0.0"
dvc = "^3.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
